# AMR_Pi

./: .gitignore
camera_config/ms_lifecam/: config.yaml  params.yaml
my_cpp_pkg/: CMakeLists.txt  package.xml
my_cpp_pkg/include/ctre/phoenix/sensors/: PigeonIMU_StickyFaults.h
my_cpp_pkg/include/my_cpp_pkg/: arduino_serial_cmds.hpp
my_cpp_pkg/src/: arduino_serial.cpp  ctre.cpp  radio_link_publisher.cpp
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: desktop_ui.py
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: amr_bot_launch.py
my_robot_interfaces/: CMakeLists.txt  package.xml
my_robot_interfaces/msg/: ArduinoSerial.msg  MotorControlData.msg
scripts/: amr_bot_desktop_launch.sh  amr_bot_pi_launch.sh
